--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>JULIAJULIAJULIAJULIAJULIA</title>
-  <meta name="description" content="JULIA">
-  <meta name="author" content="@JayCraig1101">
+  <title>JULIA CRAIG</title>
+  <meta name="description" content="JULIA CRAIG">
+  <meta name="author" content="JULIA CRAIG">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -15,115 +15,33 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:500,700" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/pure@0.6.1(base-min.css+grids-min.css+grids-responsive-min.css)">
   <link rel="stylesheet" href="c/style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!--link rel="icon" type="image/png" href="images/favicon.png"-->
+  <!--link rel="icon" type="image/png" href="i/favicon.png"-->
 
 </head>
-<body>
+<body class="position-relative">
 
-  <div class="wrapper">
+    <span class="name first-name noselect">JULIA</span>
 
-    <div class="pure-g">
-      <div class="pure-u-lg-3-8 pure-u-md-1-3 pure-u-sm-1-4 pure-u-1-6"></div>
-      <div class="pure-u-lg-1-4 pure-u-md-1-3 pure-u-sm-1-2 pure-u-2-3">
+        <div class="contact">
+          <div class="container">
+            <a href="mailto:jcmatrix11@gmail.com" class="email" title="pls no spam" target="_blank">email</a><!--
 
-        <div class="name">
+            --><a href="https://twitter.com/JayCraig1101" class="twitter" title="pls follow me" target="_blank">twitter</a><!--
 
-          <!-- row 1 -->
-          <div class="pure-g">
-            <div class="pure-u-1-5">J</div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
+            --><a href="https://www.facebook.com/julia.craig.904" class="facebook" title="pls be my friend" target="_blank">facebook</a>
           </div>
 
-          <!-- row 2 -->
-          <div class="pure-g">
-            <div class="pure-u-1-5">J</div>
-            <div class="pure-u-1-5">U</div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-          </div>
+        </div><!-- end of .contact -->
 
-          <!-- row 3 -->
-          <div class="pure-g">
-            <div class="pure-u-1-5">J</div>
-            <div class="pure-u-1-5">U</div>
-            <div class="pure-u-1-5">L</div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-          </div>
-
-          <!-- row 4 -->
-          <div class="pure-g">
-            <div class="pure-u-1-5">J</div>
-            <div class="pure-u-1-5">U</div>
-            <div class="pure-u-1-5">L</div>
-            <div class="pure-u-1-5">I</div>
-            <div class="pure-u-1-5"></div>
-          </div>
-
-          <!-- row 5 -->
-          <div class="pure-g">
-            <div class="pure-u-1-5">J</div>
-            <div class="pure-u-1-5">U</div>
-            <div class="pure-u-1-5">L</div>
-            <div class="pure-u-1-5">I</div>
-            <div class="pure-u-1-5">A</div>
-          </div>
-
-          <!-- row 6 -->
-          <div class="pure-g">
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5">U</div>
-            <div class="pure-u-1-5">L</div>
-            <div class="pure-u-1-5">I</div>
-            <div class="pure-u-1-5">A</div>
-          </div>
-
-          <!-- row 7 -->
-          <div class="pure-g">
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5">L</div>
-            <div class="pure-u-1-5">I</div>
-            <div class="pure-u-1-5">A</div>
-          </div>
-
-          <!-- row 8 -->
-          <div class="pure-g">
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5">I</div>
-            <div class="pure-u-1-5">A</div>
-          </div>
-
-          <!-- row 9 -->
-          <div class="pure-g">
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5"></div>
-            <div class="pure-u-1-5">A</div>
-          </div>
-
-        </div>
-
-      </div>
-      <div class="pure-u-lg-3-8 pure-u-md-1-3 pure-u-sm-1-4 pure-u-1-6"></div>
-    </div>
-  </div> <!-- end of .wrapper -->
+    <span class="name last-name noselect">CRAIG</span>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
