change some of the CSS classes to be more generic

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>JULIA CRAIG</title>
+  <title>CONTACT - JULIA CRAIG</title>
   <meta name="description" content="JULIA CRAIG">
   <meta name="author" content="JULIA CRAIG">
 
@@ -28,16 +28,18 @@
 </head>
 <body class="position-relative">
 
-    <span class="page-name page-name-top noselect">JULIA</span>
+    <span class="page-name page-name-top noselect">CONTACT</span>
 
         <div class="content">
           <div class="container">
-            <a href="contact.html" class="contact_page" title="get @ me">contact</a>
+            <a href="mailto:jcmatrix11@gmail.com" class="email" title="pls no spam" target="_blank">email</a><!--
+
+            --><a href="https://twitter.com/JayCraig1101" class="twitter" title="pls follow me" target="_blank">twitter</a><!--
+
+            --><a href="https://www.facebook.com/julia.craig.904" class="facebook" title="pls be my friend" target="_blank">facebook</a>
           </div>
 
         </div><!-- end of .contact -->
-
-    <span class="page-name page-name-bottom noselect">CRAIG</span>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
