Add example page
This page doesn't have the same CSS styles.
Just as an example, that pages can be completely different.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
         <div class="content">
           <div class="container">
-            <a href="contact.html" class="contact_page" title="get @ me">contact</a>
+            <a href="contact.html" class="contact-page-link" title="get @ me">contact</a><!--
+            --><a href="example.html" class="example-page-link" title="nothing to see here">example</a>
           </div>
 
         </div><!-- end of .contact -->
