--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
   <!--link rel="icon" type="image/png" href="i/favicon.png"-->
 
 </head>
-<body class="position-relative">
+<body class="contact-page position-relative">
 
     <span class="page-name page-name-top noselect">CONTACT</span>
 
