--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <html lang=en>
   <head>
     <meta charset=utf-8>
-    <title>PAGE TITLE</title>
+    <title>Work goddammit</title>
     <style>
       h1 {
         font-size: 40px;
