--- a/contact.html
+++ b/contact.html
@@ -27,19 +27,20 @@
 
 </head>
 <body class="contact-page position-relative">
+    <h1 class="visually-hidden">Contact</h1>
 
-    <span class="page-name page-name-top noselect">CONTACT</span>
+    <span class="page-name page-name--top noselect">CONTACT</span>
 
-        <div class="content">
-          <div class="container">
-            <a href="mailto:jcmatrix11@gmail.com" class="email" title="pls no spam" target="_blank">email</a><!--
+    <div class="content">
+      <div class="container">
+        <a href="mailto:jcmatrix11@gmail.com" class="link__email" title="pls no spam" target="_blank">email</a><!--
 
-            --><a href="https://twitter.com/JayCraig1101" class="twitter" title="pls follow me" target="_blank">twitter</a><!--
+        --><a href="https://twitter.com/JayCraig1101" class="link__twitter" title="pls follow me" target="_blank">twitter</a><!--
 
-            --><a href="https://www.facebook.com/julia.craig.904" class="facebook" title="pls be my friend" target="_blank">facebook</a>
-          </div>
+        --><a href="https://www.facebook.com/julia.craig.904" class="link__facebook" title="pls be my friend" target="_blank">facebook</a>
+      </div>
 
-        </div><!-- end of .contact -->
+    </div><!-- end of .content -->
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
