--- a/index.html
+++ b/index.html
@@ -27,18 +27,23 @@
 
 </head>
 <body class="index-page position-relative">
+    <h1 class="visually-hidden">Julia Craig</h1>
 
-    <span class="page-name page-name-top noselect">JULIA</span>
+    <span class="page-name page-name--top noselect">JULIA</span>
 
-        <div class="content">
-          <div class="container">
-            <a href="contact.html" class="contact-page-link" title="get @ me">contact</a><!--
-            --><a href="example.html" class="example-page-link" title="nothing to see here">example</a>
-          </div>
+    <div class="content content--hover">
+      <p>My name is Julia and I am a <em>genius</em>.</p>
+    </div>
 
-        </div><!-- end of .contact -->
+    <div class="content">
+      <div class="container">
+        <a href="pics.html" class="link__pics" title="so amaze">pics</a><!--
+        --><a href="contact.html" class="link__contact" title="get @ me">contact</a>
+      </div>
+    </div><!-- end of .contact -->
 
-    <span class="page-name page-name-bottom noselect">CRAIG</span>
+
+    <span class="page-name page-name--bottom noselect">CRAIG</span>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
