back link on the contact page

--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,9 @@
 
     </div><!-- end of .content -->
 
+    <footer>
+      <a href="index.html" class="link__back">&larr; back</a>
+    </footer>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
