add new (empty) page

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>CONTACT - JULIA CRAIG</title>
-  <meta name="description" content="JULIA CRAIG">
+  <meta name="description" content="CONTACT JULIA CRAIG">
   <meta name="author" content="JULIA CRAIG">
 
   <!-- Mobile Specific Metas
@@ -17,7 +17,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:500,700" rel="stylesheet">
 
-  <!-- CSS change
+  <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="c/style.css">
 
