--- a/pics.html
+++ b/pics.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>JULIA CRAIG</title>
-  <meta name="description" content="JULIA CRAIG">
+  <title>PICS - JULIA CRAIG</title>
+  <meta name="description" content="PICS BY JULIA CRAIG">
   <meta name="author" content="JULIA CRAIG">
 
   <!-- Mobile Specific Metas
@@ -19,33 +19,26 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/pure@0.6.2(base-min.css+grids-min.css+grids-responsive-min.css)">
+
   <link rel="stylesheet" href="c/style.css">
+  <link rel="stylesheet" href="c/pics.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!--link rel="icon" type="image/png" href="i/favicon.png"-->
 
 </head>
-<body class="index-page position-relative">
-    <h1 class="visually-hidden">Julia Craig</h1>
+<body class="pics-page position-relative">
+    <h1 class="visually-hidden">Pictures</h1>
 
-    <span class="page-name page-name--top noselect">JULIA</span>
-
-    <div class="content content--hover">
-      <p>My name is Julia and I am a <em>genius</em>.</p>
-    </div>
-
-    <div class="content">
-      <div class="container">
-        <!-- focus styles please! -->
-        <a href="pics.html" class="link__pics" title="so amaze">pics</a><!--
-        --><a href="contact.html" class="link__contact" title="get @ me">contact</a>
-      </div>
-    </div><!-- end of .contact -->
+    <span class="page-name page-name--top noselect">PICS</span>
 
 
-    <span class="page-name page-name--bottom noselect">CRAIG</span>
 
+    <footer>
+      <a href="index.html" class="link__back">&larr; back</a>
+    </footer>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
