subclass content so it's reusable

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
     <span class="page-name page-name--top noselect">CONTACT</span>
 
-    <div class="content">
+    <div class="content content--absolute content--full-width">
       <div class="container">
         <a href="mailto:jcmatrix11@gmail.com" class="link__email" title="pls no spam" target="_blank">email</a><!--
 
