--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p>My name is Julia and I am a <em>genius</em>.</p>
     </div>
 
-    <div class="content">
+    <div class="content content--absolute content--full-width">
       <div class="container">
         <!-- focus styles please! -->
         <a href="pics.html" class="link__pics" title="so amaze">pics</a><!--
