--- a/pics.html
+++ b/pics.html
@@ -34,7 +34,49 @@
 
     <span class="page-name page-name--top noselect">PICS</span>
 
+    <div class="content content--full-width content--block">
 
+
+
+        <div class="subheading">
+          <h2>2016</h2>
+        </div>
+
+      <!-- first row of images -->
+      <div class="pure-g">
+
+        <div class="pure-u-1-3">
+          <img class="pure-img" src="i/1.jpg" alt="Cat 1">
+        </div>
+
+        <div class="pure-u-1-3">
+          <img class="pure-img" src="i/2.jpg" alt="Cat 2">
+        </div>
+
+        <div class="pure-u-1-3">
+          <img class="pure-img" src="i/3.jpg" alt="Cat 3">
+        </div>
+
+      </div><!-- end of .pure-g -->
+
+      <!-- second row of images -->
+      <div class="pure-g">
+
+        <div class="pure-u-1-3">
+          <img class="pure-img" src="i/2.jpg" alt="Cat 2">
+        </div>
+
+        <div class="pure-u-1-3">
+          <img class="pure-img" src="i/3.jpg" alt="Cat 3">
+        </div>
+
+        <div class="pure-u-1-3">
+          <img class="pure-img" src="i/1.jpg" alt="Cat 1">
+        </div>
+
+      </div><!-- end of .pure-g -->
+
+    </div><!-- end of .content -->
 
     <footer>
       <a href="index.html" class="link__back">&larr; back</a>
