remove hidden overflow by default

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
   <!--link rel="icon" type="image/png" href="i/favicon.png"-->
 
 </head>
-<body class="contact-page position-relative">
+<body class="contact-page position-relative overflow-hidden">
     <h1 class="visually-hidden">Contact</h1>
 
     <span class="page-name page-name--top noselect">CONTACT</span>
