--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!--link rel="icon" type="image/png" href="i/favicon.png"-->
 
 </head>
-<body class="index-page position-relative">
+<body class="index-page position-relative overflow-hidden">
     <h1 class="visually-hidden">Julia Craig</h1>
 
     <span class="page-name page-name--top noselect">JULIA</span>
