gallery page kind of done

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
     </div><!-- end of .content -->
 
-    <footer>
+    <footer class="footer--absolute">
       <a href="index.html" class="link__back">&larr; back</a>
     </footer>
 <!-- End Document
