--- a/pics.html
+++ b/pics.html
@@ -36,47 +36,91 @@
 
     <div class="content content--full-width content--block">
 
-
-
+      <div class="year">
         <div class="subheading">
           <h2>2016</h2>
         </div>
 
-      <!-- first row of images -->
-      <div class="pure-g">
+        <!-- first row of images -->
+        <div class="pure-g pics__row">
 
-        <div class="pure-u-1-3">
-          <img class="pure-img" src="i/1.jpg" alt="Cat 1">
+          <div class="pure-u-1-3">
+            <span title="cat with tongue">
+              <img class="pure-img" src="i/1.jpg" alt="cat with tongue">
+            </span>
+          </div>
+
+          <div class="pure-u-1-3">
+            <span title="dorky cat">
+              <img class="pure-img" src="i/2.jpg" alt="dorky cat">
+            </span>
+          </div>
+
+          <div class="pure-u-1-3">
+            <span title="=^.^=">
+              <img class="pure-img" src="i/3.jpg" alt="=^.^=">
+            </span>
+          </div>
+
+        </div><!-- end of .pure-g -->
+
+        <!-- second row of images -->
+        <div class="pure-g pics__row">
+
+          <div class="pure-u-1-3">
+            <span title="dorky cat evil twin 1">
+              <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 1">
+            </span>
+          </div>
+
+          <div class="pure-u-1-3">
+            <span title="earnest cat">
+              <img class="pure-img" src="i/3.jpg" alt="earnest cat">
+            </span>
+          </div>
+
+          <div class="pure-u-1-3">
+            <span title="dorky cat evil twin 2">
+              <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 2">
+            </span>
+          </div>
+
+        </div><!-- end of .pure-g -->
+
+      </div><!-- end of .year-->
+
+      <div class="year">
+
+        <div class="subheading">
+          <h2>2015</h2>
         </div>
 
-        <div class="pure-u-1-3">
-          <img class="pure-img" src="i/2.jpg" alt="Cat 2">
-        </div>
+        <!-- first row of images -->
+        <div class="pure-g pics__row">
 
-        <div class="pure-u-1-3">
-          <img class="pure-img" src="i/3.jpg" alt="Cat 3">
-        </div>
+          <div class="pure-u-1-3">
+            <span title="happy cat">
+              <img class="pure-img" src="i/3.jpg" alt="happy cat">
+            </span>
+          </div>
 
-      </div><!-- end of .pure-g -->
+          <div class="pure-u-1-3">
+            <span title="pleased cat">
+              <img class="pure-img" src="i/3.jpg" alt="pleased cat">
+            </span>
+          </div>
 
-      <!-- second row of images -->
-      <div class="pure-g">
+          <div class="pure-u-1-3">
+            <span title="amused cat">
+              <img class="pure-img" src="i/3.jpg" alt="amused cat">
+            </span>
+          </div>
 
-        <div class="pure-u-1-3">
-          <img class="pure-img" src="i/2.jpg" alt="Cat 2">
-        </div>
+        </div><!-- end of .pure-g -->
 
-        <div class="pure-u-1-3">
-          <img class="pure-img" src="i/3.jpg" alt="Cat 3">
-        </div>
+      </div><!-- end of .content -->
 
-        <div class="pure-u-1-3">
-          <img class="pure-img" src="i/1.jpg" alt="Cat 1">
-        </div>
-
-      </div><!-- end of .pure-g -->
-
-    </div><!-- end of .content -->
+    </div><!-- end of .year -->
 
     <footer>
       <a href="index.html" class="link__back">&larr; back</a>
