fixed links. (now they are all white)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <span class="page-name page-name--top noselect">JULIA</span>
 
-    <div class="content content--hover">
+    <div class="content content--hover content--absolute content--full-width">
       <p>My name is Julia and I am a <em>genius</em>.</p>
     </div>
 
