gallery is responsive

--- a/pics.html
+++ b/pics.html
@@ -44,19 +44,19 @@
         <!-- first row of images -->
         <div class="pure-g pics__row">
 
-          <div class="pure-u-1-3">
+          <div class="pure-u-1 pure-u-md-1-3">
             <span title="cat with tongue">
               <img class="pure-img" src="i/1.jpg" alt="cat with tongue">
             </span>
           </div>
 
-          <div class="pure-u-1-3">
+          <div class="pure-u-1 pure-u-md-1-3">
             <span title="dorky cat">
               <img class="pure-img" src="i/2.jpg" alt="dorky cat">
             </span>
           </div>
 
-          <div class="pure-u-1-3">
+          <div class="pure-u-1 pure-u-md-1-3">
             <span title="=^.^=">
               <img class="pure-img" src="i/3.jpg" alt="=^.^=">
             </span>
@@ -67,19 +67,19 @@
         <!-- second row of images -->
         <div class="pure-g pics__row">
 
-          <div class="pure-u-1-3">
+          <div class="pure-u-1 pure-u-md-1-3">
             <span title="dorky cat evil twin 1">
               <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 1">
             </span>
           </div>
 
-          <div class="pure-u-1-3">
+          <div class="pure-u-1 pure-u-md-1-3">
             <span title="earnest cat">
               <img class="pure-img" src="i/3.jpg" alt="earnest cat">
             </span>
           </div>
 
-          <div class="pure-u-1-3">
+          <div class="pure-u-1 pure-u-md-1-3">
             <span title="dorky cat evil twin 2">
               <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 2">
             </span>
@@ -98,19 +98,19 @@
         <!-- first row of images -->
         <div class="pure-g pics__row">
 
-          <div class="pure-u-1-3">
+          <div class="pure-u-1 pure-u-md-1-3">
             <span title="happy cat">
               <img class="pure-img" src="i/3.jpg" alt="happy cat">
             </span>
           </div>
 
-          <div class="pure-u-1-3">
+          <div class="pure-u-1 pure-u-md-1-3">
             <span title="pleased cat">
               <img class="pure-img" src="i/3.jpg" alt="pleased cat">
             </span>
           </div>
 
-          <div class="pure-u-1-3">
+          <div class="pure-u-1 pure-u-md-1-3">
             <span title="amused cat">
               <img class="pure-img" src="i/3.jpg" alt="amused cat">
             </span>
