--- a/pics.html
+++ b/pics.html
@@ -45,20 +45,20 @@
         <div class="pure-g pics__row">
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="cat with tongue">
-              <img class="pure-img" src="i/1.jpg" alt="cat with tongue">
+            <span title="Pointilism Lion">
+              <img class="pure-img" src="i/lion.jpg" alt="Pointilism Lion">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="dorky cat">
-              <img class="pure-img" src="i/2.jpg" alt="dorky cat">
+            <span title="Coeur de Pirate">
+              <img class="pure-img" src="i/french.jpg" alt="Coeur de Pirate, comparison photo and drawing">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="=^.^=">
-              <img class="pure-img" src="i/3.jpg" alt="=^.^=">
+            <span title="Tiger in Snow">
+              <img class="pure-img" src="i/tiger.jpg" alt="Tiger">
             </span>
           </div>
 
