NEW new pics art

--- a/pics.html
+++ b/pics.html
@@ -46,19 +46,19 @@
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Pointilism Lion">
-              <img class="pure-img" src="i/lion.jpg" alt="Pointilism Lion">
+              <img class="pure-img" src="i/lion.JPG" alt="Pointilism Lion">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Coeur de Pirate">
-              <img class="pure-img" src="i/french.jpg" alt="Coeur de Pirate, comparison photo and drawing">
+              <img class="pure-img" src="i/french.JPG" alt="Coeur de Pirate, comparison photo and drawing">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Tiger in Snow">
-              <img class="pure-img" src="i/tiger.jpg" alt="Tiger">
+              <img class="pure-img" src="i/tiger.JPG" alt="Tiger">
             </span>
           </div>
 
