--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
     <div class="content content--absolute content--full-width">
       <div class="container">
-        <a href="mailto:jcmatrix11@gmail.com" class="link__email" title="pls no spam" target="_blank">email</a><!--
+        <a href="mailto:juliacraig3@cmail.carleton.ca" class="link__email" title="pls no spam" target="_blank">email</a><!--
 
         --><a href="https://twitter.com/JayCraig1101" class="link__twitter" title="pls follow me" target="_blank">twitter</a><!--
 
