--- a/pics.html
+++ b/pics.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>PICS - JULIA CRAIG</title>
-  <meta name="description" content="PICS BY JULIA CRAIG">
+  <title>PORTFOLIO - JULIA CRAIG</title>
+  <meta name="description" content="PORTFOLIO BY JULIA CRAIG">
   <meta name="author" content="JULIA CRAIG">
 
   <!-- Mobile Specific Metas
@@ -32,13 +32,14 @@
 <body class="pics-page position-relative">
     <h1 class="visually-hidden">Pictures</h1>
 
-    <span class="page-name page-name--top noselect">PICS</span>
+    <span class="page-name page-name--top noselect">PORTFOLIO</span>
 
     <div class="content content--full-width content--block">
+	</*2016- Present*/>
 
       <div class="year">
         <div class="subheading">
-          <h2>2016</h2>
+          <h2>2016 - Present</h2>
         </div>
 
         <!-- first row of images -->
@@ -92,21 +93,21 @@
       <div class="year">
 
         <div class="subheading">
-          <h2>2015</h2>
+          <h2>Posters</h2>
         </div>
 
         <!-- first row of images -->
         <div class="pure-g pics__row">
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="happy cat">
-              <img class="pure-img" src="i/3.jpg" alt="happy cat">
+            <span title="Batman">
+              <img class="pure-img" src="i/batman.JPG" alt="Batman"> 
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="pleased cat">
-              <img class="pure-img" src="i/3.jpg" alt="pleased cat">
+            <span title="Wolverine">
+              <img class="pure-img" src="i/hugh.JPG" alt="Wolverine">
             </span>
           </div>
 
@@ -115,12 +116,86 @@
               <img class="pure-img" src="i/3.jpg" alt="amused cat">
             </span>
           </div>
+		 <!-- second row of images -->
+        <div class="pure-g pics__row">
+
+          <div class="pure-u-1 pure-u-md-1-3">
+            <span title="Ben Howard">
+              <img class="pure-img" src="i/Ben.JPG" alt="Ben Howard">
+            </span>
+          </div>
+
+          <div class="pure-u-1 pure-u-md-1-3">
+            <span title="The Head and the Heart">
+              <img class="pure-img" src="i/thth.JPG" alt="The Head and the Heart">
+            </span>
+          </div>
+
+          <div class="pure-u-1 pure-u-md-1-3">
+            <span title="dorky cat evil twin 2">
+              <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 2">
+            </span>
+          </div>
+
+        </div><!-- end of .pure-g -->
 
         </div><!-- end of .pure-g -->
 
       </div><!-- end of .content -->
 
     </div><!-- end of .year -->
+	  <div class="content content--full-width content--block">
+
+      <div class="year">
+        <div class="subheading">
+          <h2>2016</h2>
+        </div>
+
+        <!-- first row of images -->
+        <div class="pure-g pics__row">
+
+          <div class="pure-u-1 pure-u-md-1-3">
+            <span title="Pointilism Lion">
+              <img class="pure-img" src="i/lion.JPG" alt="Pointilism Lion">
+            </span>
+          </div>
+
+          <div class="pure-u-1 pure-u-md-1-3">
+            <span title="Coeur de Pirate">
+              <img class="pure-img" src="i/french.JPG" alt="Coeur de Pirate, comparison photo and drawing">
+            </span>
+          </div>
+
+          <div class="pure-u-1 pure-u-md-1-3">
+            <span title="Tiger in Snow">
+              <img class="pure-img" src="i/tiger.JPG" alt="Tiger">
+            </span>
+          </div>
+
+        </div><!-- end of .pure-g -->
+
+        <!-- second row of images -->
+        <div class="pure-g pics__row">
+
+          <div class="pure-u-1 pure-u-md-1-3">
+            <span title="dorky cat evil twin 1">
+              <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 1">
+            </span>
+          </div>
+
+          <div class="pure-u-1 pure-u-md-1-3">
+            <span title="earnest cat">
+              <img class="pure-img" src="i/3.jpg" alt="earnest cat">
+            </span>
+          </div>
+
+          <div class="pure-u-1 pure-u-md-1-3">
+            <span title="dorky cat evil twin 2">
+              <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 2">
+            </span>
+          </div>
+
+        </div><!-- end of .pure-g -->
 
     <footer>
       <a href="index.html" class="link__back">&larr; back</a>
