--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="content content--absolute content--full-width">
       <div class="container">
         <!-- focus styles please! -->
-        <a href="pics.html" class="link__pics" title="so amaze">pics</a><!--
+        <a href="pics.html" class="link__pics" title="so amaze">portfolio</a><!--
         --><a href="contact.html" class="link__contact" title="get @ me">contact</a>
       </div>
     </div><!-- end of .contact -->
