--- a/pics.html
+++ b/pics.html
@@ -35,11 +35,11 @@
     <span class="page-name page-name--top noselect">PORTFOLIO</span>
 
     <div class="content content--full-width content--block">
-	</*2016- Present*/>
+	<!-- 2016 - Present -->
 
       <div class="year">
         <div class="subheading">
-          <h2>2016 - Present</h2>
+          <h2>Recent</h2>
         </div>
 
         <!-- first row of images -->
@@ -63,32 +63,9 @@
             </span>
           </div>
 
-        </div><!-- end of .pure-g -->
+        </div><!-- end of .pure-g (end of the row)-->
 
-        <!-- second row of images -->
-        <div class="pure-g pics__row">
-
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="dorky cat evil twin 1">
-              <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 1">
-            </span>
-          </div>
-
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="earnest cat">
-              <img class="pure-img" src="i/3.jpg" alt="earnest cat">
-            </span>
-          </div>
-
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="dorky cat evil twin 2">
-              <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 2">
-            </span>
-          </div>
-
-        </div><!-- end of .pure-g -->
-
-      </div><!-- end of .year-->
+	  </div><!-- end of year (Recent) -->
 
       <div class="year">
 
@@ -112,10 +89,13 @@
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="amused cat">
-              <img class="pure-img" src="i/3.jpg" alt="amused cat">
+            <span title="Iron Man">
+              <img class="pure-img" src="i/iron.JPG" alt="Iron Man">
             </span>
           </div>
+		
+		</div><!-- end of pure-g (end of the row)-->
+		
 		 <!-- second row of images -->
         <div class="pure-g pics__row">
 
@@ -132,71 +112,70 @@
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="dorky cat evil twin 2">
-              <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 2">
+            <span title="Patrick Watson">
+              <img class="pure-img" src="i/watson.JPG" alt="Patrick Watson">
             </span>
           </div>
 
-        </div><!-- end of .pure-g -->
+        </div><!-- end of .pure-g (end of the row)-->
 
-        </div><!-- end of .pure-g -->
-
-      </div><!-- end of .content -->
-
-    </div><!-- end of .year -->
-	  <div class="content content--full-width content--block">
+	  </div><!-- end of .year (Posters)-->
 
       <div class="year">
         <div class="subheading">
-          <h2>2016</h2>
+          <h2>Black and White</h2>
         </div>
 
         <!-- first row of images -->
         <div class="pure-g pics__row">
+		
+          <div class="pure-u-1 pure-u-md-1-3">
+            <span title="Leonardo Dicaprio">
+              <img class="pure-img" src="i/leo.JPG" alt="Leonardo Dicaprio">
+            </span>
+          </div>		
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Pointilism Lion">
-              <img class="pure-img" src="i/lion.JPG" alt="Pointilism Lion">
+            <span title="Hear me roar">
+              <img class="pure-img" src="i/roar.JPG" alt="Lion">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Coeur de Pirate">
-              <img class="pure-img" src="i/french.JPG" alt="Coeur de Pirate, comparison photo and drawing">
+            <span title="Trapped">
+              <img class="pure-img" src="i/octo.JPG" alt="Octopus in Lightbulb">
             </span>
           </div>
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Tiger in Snow">
-              <img class="pure-img" src="i/tiger.JPG" alt="Tiger">
-            </span>
-          </div>
-
-        </div><!-- end of .pure-g -->
+        </div><!-- end of .pure-g (end of the row)-->
 
         <!-- second row of images -->
         <div class="pure-g pics__row">
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="dorky cat evil twin 1">
-              <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 1">
+            <span title="Leonardo Dicaprio">
+              <img class="pure-img" src="i/leo.JPG" alt="Leonardo Dicaprio">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="earnest cat">
-              <img class="pure-img" src="i/3.jpg" alt="earnest cat">
+            <span title="Breaking Bad">
+              <img class="pure-img" src="i/breaking.JPG" alt="Breaking Bad">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="dorky cat evil twin 2">
-              <img class="pure-img" src="i/2.jpg" alt="dorky cat evil twin 2">
+            <span title="Wiz Khalifa">
+              <img class="pure-img" src="i/wiz.JPG" alt="Wiz Khalifa">
             </span>
           </div>
 
-        </div><!-- end of .pure-g -->
+        </div><!-- end of .pure-g (end of the row)-->
 
+	  </div><!-- end of year (Black and White)-->
+
+    </div><!-- end of .content -->
+		
     <footer>
       <a href="index.html" class="link__back">&larr; back</a>
     </footer>
