oops now its done
repleced the second leo with ducklings

--- a/pics.html
+++ b/pics.html
@@ -153,8 +153,8 @@
         <div class="pure-g pics__row">
 
           <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Leonardo Dicaprio">
-              <img class="pure-img" src="i/leo.JPG" alt="Leonardo Dicaprio">
+            <span title="Ducklings">
+              <img class="pure-img" src="i/ducks.JPG" alt="Ducklings">
             </span>
           </div>
 
