pulsing red/orange background

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <span class="page-name page-name--top noselect">JULIA</span>
 
-    <div class="content content--hover content--absolute content--full-width">
-      <p>My name is Julia and I am a <em>genius</em>.</p>
+    <div class="content pulse content--hover content--absolute content--full-width">
+      <p class="anim-text-flow">My name is Julia and I am a <em>genius</em>.</p>
     </div>
 
     <div class="content content--absolute content--full-width">
