funky up the words
Give the page titles a text shadow that dances around when
hovered over.

Also:
- make the page titles more visible
- make the link borders thicker
- put in some margin between link borders
- pulsing hover background for the main page hover effect

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     <span class="page-name page-name--top noselect">CONTACT</span>
 
     <div class="content content--absolute content--full-width">
-      <div class="container">
+      <div class="container centered">
         <a href="mailto:juliacraig3@cmail.carleton.ca" class="link__email" title="pls no spam" target="_blank">email</a><!--
 
         --><a href="https://twitter.com/JayCraig1101" class="link__twitter" title="pls follow me" target="_blank">twitter</a><!--
