--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
 
 </head>
 <body class="index-page position-relative overflow-hidden">
+  <header>
     <h1 class="visually-hidden">Julia Craig</h1>
-
-    <span class="page-name page-name--top noselect">JULIA</span>
-
-    <div class="content pulse content--hover content--absolute content--full-width">
-      <p class="anim-text-flow">My name is Julia and I am a <em>genius</em>.</p>
+  </header>
+  <span class="page-name page-name--top noselect">JULIA</span>
+  <span class="page-name page-name--bottom noselect">CRAIG</span>
+  <main role="main">
+    <div class="content pulse content--show-on-hover content--absolute content--full-width">
+      <p class="centered">My name is Julia and I am a <em>genius</em>.</p>
     </div>
 
     <div class="content content--absolute content--full-width">
-      <div class="container">
+      <div class="container centered">
         <!-- focus styles please! -->
         <a href="pics.html" class="link__pics" title="so amaze">portfolio</a><!--
         --><a href="contact.html" class="link__contact" title="get @ me">contact</a>
       </div>
     </div><!-- end of .contact -->
-
-
-    <span class="page-name page-name--bottom noselect">CRAIG</span>
+  </main>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
