update headers to have (optional) back links
this means you can go back from the top of the page.
(doesnt work on mobile 😬)

--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,12 @@
 
 </head>
 <body class="contact-page position-relative overflow-hidden">
-    <h1 class="visually-hidden">Contact</h1>
 
-    <span class="page-name page-name--top noselect">CONTACT</span>
+    <header class="page-name page-name--top hover-container">
+      <h1 class="visually-hidden">Contact</h1>
+      <span class="invisible-on-hover">CONTACT</span>
+      <a class="visible-on-hover link__back" href="index.html">&larr;&nbsp;BACK</a>
+    </header>
 
     <div class="content content--absolute content--full-width">
       <div class="container centered">
@@ -43,7 +46,7 @@
     </div><!-- end of .content -->
 
     <footer class="footer--absolute">
-      <a href="index.html" class="link__back">&larr; back</a>
+      <a href="index.html" class="link__back">&larr;&nbsp;back</a>
     </footer>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
