--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
 
 </head>
 <body class="index-page position-relative overflow-hidden">
-  <header>
+  <header class="page-name page-name--top">
     <h1 class="visually-hidden">Julia Craig</h1>
+    <span>JULIA</span>
   </header>
-  <span class="page-name page-name--top noselect">JULIA</span>
-  <span class="page-name page-name--bottom noselect">CRAIG</span>
+
+  <span class="page-name page-name--bottom">
+    <span>CRAIG</span>
+  </span>
+
   <main role="main">
     <div class="content pulse content--show-on-hover content--absolute content--full-width">
       <p class="centered">My name is Julia and I am a <em>genius</em>.</p>
