--- a/pics.html
+++ b/pics.html
@@ -30,9 +30,12 @@
 
 </head>
 <body class="pics-page position-relative">
-    <h1 class="visually-hidden">Pictures</h1>
 
-    <span class="page-name page-name--top noselect">PORTFOLIO</span>
+    <header class="page-name page-name--top hover-container">
+      <h1 class="visually-hidden">Portfolio</h1>
+      <span class="invisible-on-hover">PORTFOLIO</span>
+      <a class="visible-on-hover link__back" href="index.html">&larr;&nbsp;BACK</a>
+    </header>
 
     <div class="content content--full-width content--block">
 	<!-- 2016 - Present -->
@@ -177,7 +180,7 @@
     </div><!-- end of .content -->
 
     <footer>
-      <a href="index.html" class="link__back">&larr; back</a>
+      <a href="index.html" class="link__back">&larr;&nbsp;back</a>
     </footer>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
