--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/pure@0.6.2(base-min.css+grids-min.css+grids-responsive-min.css)">
 
   <link rel="stylesheet" href="c/style.css">
-  <link rel="stylesheet" href="c/pics.css">
+  <link rel="stylesheet" href="c/portfolio.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!--link rel="icon" type="image/png" href="i/favicon.png"-->
 
 </head>
-<body class="pics-page position-relative">
+<body class="portfolio-page position-relative">
 
     <header class="page-name page-name--top hover-container">
       <h1 class="visually-hidden">Portfolio</h1>
