stop shouting so much
It's better to write sensibly and use CSS to format text

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>JULIA CRAIG</title>
-  <meta name="description" content="JULIA CRAIG">
-  <meta name="author" content="JULIA CRAIG">
+  <title>Julia Craig dot CA</title>
+  <meta name="description" content="Homepage of Julia Craig">
+  <meta name="author" content="Julia Craig">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -29,11 +29,11 @@
 <body class="index-page position-relative overflow-hidden">
   <header class="page-name page-name--top">
     <h1 class="visually-hidden">Julia Craig</h1>
-    <span>JULIA</span>
+    <span>Julia</span>
   </header>
 
   <span class="page-name page-name--bottom">
-    <span>CRAIG</span>
+    <span>Craig</span>
   </span>
 
   <main role="main">
