--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>PORTFOLIO - JULIA CRAIG</title>
-  <meta name="description" content="PORTFOLIO BY JULIA CRAIG">
-  <meta name="author" content="JULIA CRAIG">
+  <title>Portfolio - Julia Craig</title>
+  <meta name="description" content="Portfolio of Julia Craig">
+  <meta name="author" content="Julia Craig">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -33,8 +33,8 @@
 
     <header class="page-name page-name--top hover-container">
       <h1 class="visually-hidden">Portfolio</h1>
-      <span class="invisible-on-hover">PORTFOLIO</span>
-      <a class="visible-on-hover link__back" href="index.html">&larr;&nbsp;BACK</a>
+      <span class="invisible-on-hover">Portfolio</span>
+      <a class="visible-on-hover link__back" href="index.html">&larr;&nbsp;Back</a>
     </header>
 
     <div class="content content--full-width content--block">
