--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>CONTACT - JULIA CRAIG</title>
-  <meta name="description" content="CONTACT JULIA CRAIG">
-  <meta name="author" content="JULIA CRAIG">
+  <title>Contact - Julia Craig</title>
+  <meta name="description" content="Contact Julia Craig">
+  <meta name="author" content="Julia Craig">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -30,8 +30,8 @@
 
     <header class="page-name page-name--top hover-container">
       <h1 class="visually-hidden">Contact</h1>
-      <span class="invisible-on-hover">CONTACT</span>
-      <a class="visible-on-hover link__back" href="index.html">&larr;&nbsp;BACK</a>
+      <span class="invisible-on-hover">Contact</span>
+      <a class="visible-on-hover link__back" href="index.html">&larr;&nbsp;Back</a>
     </header>
 
     <div class="content content--absolute content--full-width">
