Move CSS files to c/src and c/dst
Source CSS files live in the c/src directory.
Processed CSS files exist in c/dst directory.
Gulp task uses the former to create the latter.

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/pure@0.6.2(base-min.css+grids-min.css+grids-responsive-min.css)">
 
-  <link rel="stylesheet" href="c/style.css">
-  <link rel="stylesheet" href="c/portfolio.css">
+  <link rel="stylesheet" href="c/dst/style.css">
+  <link rel="stylesheet" href="c/dst/portfolio.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
