--- a/portfolio.html
+++ b/portfolio.html
@@ -50,19 +50,34 @@
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Pointilism Lion">
-              <img class="pure-img" src="i/lion.JPG" alt="Pointilism Lion">
-            </span>
+              <img
+                class="pure-img"
+                srcset="i/dst/lion-sm.jpg 480w,
+                        i/dst/lion-md.jpg 768w,
+                        i/dst/lion-lg.jpg 1240w"
+                alt="Pointilism Lion">
+              </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Coeur de Pirate">
-              <img class="pure-img" src="i/french.JPG" alt="Coeur de Pirate, comparison photo and drawing">
+              <img
+                class="pure-img"
+                srcset="i/dst/french-sm.jpg 480w,
+                        i/dst/french-md.jpg 768w,
+                        i/dst/french-lg.jpg 1240w"
+                alt="Coeur de Pirate, comparison photo and drawing">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Tiger in Snow">
-              <img class="pure-img" src="i/tiger.JPG" alt="Tiger">
+              <img
+                class="pure-img"
+                srcset="i/dst/tiger-sm.jpg 480w,
+                        i/dst/tiger-md.jpg 768w,
+                        i/dst/tiger-lg.jpg 1240w"
+                alt="Tiger">
             </span>
           </div>
 
@@ -81,19 +96,34 @@
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Batman">
-              <img class="pure-img" src="i/batman.JPG" alt="Batman">
+              <img
+                class="pure-img"
+                srcset="i/dst/batman-sm.jpg 480w,
+                        i/dst/batman-md.jpg 768w,
+                        i/dst/batman-lg.jpg 1240w"
+                alt="Batman">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Wolverine">
-              <img class="pure-img" src="i/hugh.JPG" alt="Wolverine">
+              <img
+                class="pure-img"
+                srcset="i/dst/hugh-sm.jpg 480w,
+                        i/dst/hugh-md.jpg 768w,
+                        i/dst/hugh-lg.jpg 1240w"
+                alt="Wolverine">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Iron Man">
-              <img class="pure-img" src="i/iron.JPG" alt="Iron Man">
+              <img
+                class="pure-img"
+                srcset="i/dst/iron-sm.jpg 480w,
+                        i/dst/iron-md.jpg 768w,
+                        i/dst/iron-lg.jpg 1240w"
+                alt="Iron Man">
             </span>
           </div>
 
@@ -104,19 +134,34 @@
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Ben Howard">
-              <img class="pure-img" src="i/Ben.JPG" alt="Ben Howard">
+              <img
+                class="pure-img"
+                srcset="i/dst/ben-sm.jpg 480w,
+                        i/dst/ben-md.jpg 768w,
+                        i/dst/ben-lg.jpg 1240w"
+                alt="Ben Howard">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="The Head and the Heart">
-              <img class="pure-img" src="i/thth.JPG" alt="The Head and the Heart">
+              <img
+                class="pure-img"
+                srcset="i/dst/thth-sm.jpg 480w,
+                        i/dst/thth-md.jpg 768w,
+                        i/dst/thth-lg.jpg 1240w"
+                alt="The Head and the Heart">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Patrick Watson">
-              <img class="pure-img" src="i/watson.JPG" alt="Patrick Watson">
+              <img
+                class="pure-img"
+                srcset="i/dst/watson-sm.jpg 480w,
+                        i/dst/watson-md.jpg 768w,
+                        i/dst/watson-lg.jpg 1240w"
+                alt="Patrick Watson">
             </span>
           </div>
 
@@ -134,19 +179,34 @@
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Leonardo Dicaprio">
-              <img class="pure-img" src="i/leo.JPG" alt="Leonardo Dicaprio">
+              <img
+                class="pure-img"
+                srcset="i/dst/leo-sm.jpg 480w,
+                        i/dst/leo-md.jpg 768w,
+                        i/dst/leo-lg.jpg 1240w"
+                alt="Leonardo Dicaprio">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Hear me roar">
-              <img class="pure-img" src="i/roar.JPG" alt="Lion">
+              <img
+                class="pure-img"
+                srcset="i/dst/roar-sm.jpg 480w,
+                        i/dst/roar-md.jpg 768w,
+                        i/dst/roar-lg.jpg 1240w"
+                alt="Lion">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Trapped">
-              <img class="pure-img" src="i/octo.JPG" alt="Octopus in Lightbulb">
+              <img
+                class="pure-img"
+                srcset="i/dst/octo-sm.jpg 480w,
+                        i/dst/octo-md.jpg 768w,
+                        i/dst/octo-lg.jpg 1240w"
+                alt="Octopus in Lightbulb">
             </span>
           </div>
 
@@ -157,19 +217,34 @@
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Ducklings">
-              <img class="pure-img" src="i/ducks.JPG" alt="Ducklings">
+              <img
+                class="pure-img"
+                srcset="i/dst/ducks-sm.jpg 480w,
+                        i/dst/ducks-md.jpg 768w,
+                        i/dst/ducks-lg.jpg 1240w"
+                alt="Ducklings">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Breaking Bad">
-              <img class="pure-img" src="i/breaking.JPG" alt="Breaking Bad">
+              <img
+                class="pure-img"
+                srcset="i/dst/breaking-sm.jpg 480w,
+                        i/dst/breaking-md.jpg 768w,
+                        i/dst/breaking-lg.jpg 1240w"
+                alt="Breaking Bad">
             </span>
           </div>
 
           <div class="pure-u-1 pure-u-md-1-3">
             <span title="Wiz Khalifa">
-              <img class="pure-img" src="i/wiz.JPG" alt="Wiz Khalifa">
+              <img
+                class="pure-img"
+                srcset="i/dst/wiz-sm.jpg 480w,
+                        i/dst/wiz-md.jpg 768w,
+                        i/dst/wiz-lg.jpg 1240w"
+                alt="Wiz Khalifa, comparison photo and drawing">
             </span>
           </div>
 
