--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,15 @@
   <link rel="stylesheet" href="c/dst/style.css">
   <link rel="stylesheet" href="c/dst/portfolio.css">
 
+  <!-- JS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- http://scottjehl.github.io/picturefill/#getting-started -->
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+  </script>
+  <script src="j/dst/script.js" async></script>
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!--link rel="icon" type="image/png" href="i/favicon.png"-->
