--- a/test.html
+++ b/test.html
@@ -88,8 +88,10 @@
                       i/dst/lion-lg.jpg 1240w"
 
               alt="Pointilism Lion">
+              <span class="overlay"></span>
+              <span class="caption">Pointilism Lion</span>
             </a>
-            <figcaption>Pointilism Lion</figcaption>
+            <figcaption class="visually-hidden">Pointilism Lion</figcaption>
           </figure>
 
           <figure class="pure-u-1 pure-u-md-1-3">
@@ -100,8 +102,10 @@
                       i/dst/french-md.jpg 768w,
                       i/dst/french-lg.jpg 1240w"
               alt="Coeur de Pirate, comparison photo and drawing">
+              <span class="overlay"></span>
+              <span class="caption">Coeur de Pirate</span>
             </a>
-            <figcaption>Coeur de Pirate</figcaption>
+            <figcaption class="visually-hidden">Coeur de Pirate</figcaption>
           </figure>
 
           <figure class="pure-u-1 pure-u-md-1-3">
@@ -112,8 +116,10 @@
                       i/dst/tiger-md.jpg 768w,
                       i/dst/tiger-lg.jpg 1240w"
               alt="Tiger">
+              <span class="overlay"></span>
+              <span class="caption">Tiger in Snow</span>
             </a>
-            <figcaption>Tiger in Snow</figcaption>
+            <figcaption class="visually-hidden">Tiger in Snow</figcaption>
           </figure>
 
           <figure class="pure-u-1 pure-u-md-1-3">
@@ -124,8 +130,10 @@
                       i/dst/french-md.jpg 768w,
                       i/dst/french-lg.jpg 1240w"
               alt="Coeur de Pirate, comparison photo and drawing">
+              <span class="overlay"></span>
+              <span class="caption">Coeur de Pirate</span>
             </a>
-            <figcaption>Coeur de Pirate</figcaption>
+            <figcaption class="visually-hidden">Coeur de Pirate</figcaption>
           </figure>
 
 
@@ -137,8 +145,10 @@
                       i/dst/tiger-md.jpg 768w,
                       i/dst/tiger-lg.jpg 1240w"
               alt="Tiger">
+              <span class="overlay"></span>
+              <span class="caption">Tiger in Snow</span>
             </a>
-            <figcaption>Tiger in Snow</figcaption>
+            <figcaption class="visually-hidden">Tiger in Snow</figcaption>
           </figure>
 
           <figure class="pure-u-1 pure-u-md-1-3">
@@ -150,8 +160,10 @@
                       i/dst/lion-lg.jpg 1240w"
 
               alt="Pointilism Lion">
+              <span class="overlay"></span>
+              <span class="caption">Pointilism Lion</span>
             </a>
-            <figcaption>Pointilism Lion</figcaption>
+            <figcaption class="visually-hidden">Pointilism Lion</figcaption>
           </figure>
 
       </div><!-- end of .pure-g (end of the gallery)-->
@@ -270,7 +282,7 @@
 
 
             if(figureEl.children.length > 1) {
-                // <figcaption> content
+                // <figcaption class="visually-hidden"> content
                 item.title = figureEl.children[1].innerHTML;
             }
 
