Templating out the gallery

--- a/test.html
+++ b/test.html
@@ -79,92 +79,62 @@
       <!-- gallery of images -->
       <div class="pure-g pics__row my-gallery-1">
 
-          <figure class="pure-u-1 pure-u-md-1-3">
-            <a href="i/dst/lion-lg.jpg" data-size="1240x1240">
-              <img
-              class="pure-img"
-              srcset="i/dst/lion-sm.jpg 480w,
-                      i/dst/lion-md.jpg 768w,
-                      i/dst/lion-lg.jpg 1240w"
+        <!-- inject:jpg -->
+        <figure class="pure-u-1 pure-u-md-1-3">
+<a href="i/dst/batman-lg.jpg" data-size="1920x2560">
+<img class="pure-img" srcset="i/dst/batman-sm.jpg 480w, i/dst/batman-md.jpg 960w, i/dst/batman-lg.jpg 1920w" alt="Batman" >
+<span class="overlay"></span>
+<span class="caption">Batman</span>
+</a>
+<figcaption class="visually-hidden">Batman</figcaption>
+</figure>
 
-              alt="Pointilism Lion">
-              <span class="overlay"></span>
-              <span class="caption">Pointilism Lion</span>
-            </a>
-            <figcaption class="visually-hidden">Pointilism Lion</figcaption>
-          </figure>
+        <figure class="pure-u-1 pure-u-md-1-3">
+<a href="i/dst/ben-lg.jpg" data-size="1920x2560">
+<img class="pure-img" srcset="i/dst/ben-sm.jpg 480w, i/dst/ben-md.jpg 960w, i/dst/ben-lg.jpg 1920w" alt="Ben Howard" >
+<span class="overlay"></span>
+<span class="caption">Ben Howard</span>
+</a>
+<figcaption class="visually-hidden">Ben Howard</figcaption>
+</figure>
 
-          <figure class="pure-u-1 pure-u-md-1-3">
-            <a href="i/dst/french-lg.jpg" data-size="1240x1240">
-            <img
-              class="pure-img"
-              srcset="i/dst/french-sm.jpg 480w,
-                      i/dst/french-md.jpg 768w,
-                      i/dst/french-lg.jpg 1240w"
-              alt="Coeur de Pirate, comparison photo and drawing">
-              <span class="overlay"></span>
-              <span class="caption">Coeur de Pirate</span>
-            </a>
-            <figcaption class="visually-hidden">Coeur de Pirate</figcaption>
-          </figure>
+        <figure class="pure-u-1 pure-u-md-1-3">
+<a href="i/dst/hugh-lg.jpg" data-size="1920x2560">
+<img class="pure-img" srcset="i/dst/hugh-sm.jpg 480w, i/dst/hugh-md.jpg 960w, i/dst/hugh-lg.jpg 1920w" alt="Wolverine" >
+<span class="overlay"></span>
+<span class="caption">Wolverine</span>
+</a>
+<figcaption class="visually-hidden">Wolverine</figcaption>
+</figure>
 
-          <figure class="pure-u-1 pure-u-md-1-3">
-            <a href="i/dst/tiger-lg.jpg" data-size="1240x1240">
-            <img
-              class="pure-img"
-              srcset="i/dst/tiger-sm.jpg 480w,
-                      i/dst/tiger-md.jpg 768w,
-                      i/dst/tiger-lg.jpg 1240w"
-              alt="Tiger">
-              <span class="overlay"></span>
-              <span class="caption">Tiger in Snow</span>
-            </a>
-            <figcaption class="visually-hidden">Tiger in Snow</figcaption>
-          </figure>
+        <figure class="pure-u-1 pure-u-md-1-3">
+<a href="i/dst/iron-lg.jpg" data-size="1920x2560">
+<img class="pure-img" srcset="i/dst/iron-sm.jpg 480w, i/dst/iron-md.jpg 960w, i/dst/iron-lg.jpg 1920w" alt="Iron Man" >
+<span class="overlay"></span>
+<span class="caption">Iron Man</span>
+</a>
+<figcaption class="visually-hidden">Iron Man</figcaption>
+</figure>
 
-          <figure class="pure-u-1 pure-u-md-1-3">
-            <a href="i/dst/french-lg.jpg" data-size="1240x1240">
-            <img
-              class="pure-img"
-              srcset="i/dst/french-sm.jpg 480w,
-                      i/dst/french-md.jpg 768w,
-                      i/dst/french-lg.jpg 1240w"
-              alt="Coeur de Pirate, comparison photo and drawing">
-              <span class="overlay"></span>
-              <span class="caption">Coeur de Pirate</span>
-            </a>
-            <figcaption class="visually-hidden">Coeur de Pirate</figcaption>
-          </figure>
+        <figure class="pure-u-1 pure-u-md-1-3">
+<a href="i/dst/thth-lg.jpg" data-size="1920x1920">
+<img class="pure-img" srcset="i/dst/thth-sm.jpg 480w, i/dst/thth-md.jpg 960w, i/dst/thth-lg.jpg 1920w" alt="The Head and the Heart" >
+<span class="overlay"></span>
+<span class="caption">The Head and the Heart</span>
+</a>
+<figcaption class="visually-hidden">The Head and the Heart</figcaption>
+</figure>
 
+        <figure class="pure-u-1 pure-u-md-1-3">
+<a href="i/dst/watson-lg.jpg" data-size="1920x2560">
+<img class="pure-img" srcset="i/dst/watson-sm.jpg 480w, i/dst/watson-md.jpg 960w, i/dst/watson-lg.jpg 1920w" alt="Patrick Watson" >
+<span class="overlay"></span>
+<span class="caption">Patrick Watson</span>
+</a>
+<figcaption class="visually-hidden">Patrick Watson</figcaption>
+</figure>
 
-          <figure class="pure-u-1 pure-u-md-1-3">
-            <a href="i/dst/tiger-lg.jpg" data-size="1240x1240">
-            <img
-              class="pure-img"
-              srcset="i/dst/tiger-sm.jpg 480w,
-                      i/dst/tiger-md.jpg 768w,
-                      i/dst/tiger-lg.jpg 1240w"
-              alt="Tiger">
-              <span class="overlay"></span>
-              <span class="caption">Tiger in Snow</span>
-            </a>
-            <figcaption class="visually-hidden">Tiger in Snow</figcaption>
-          </figure>
-
-          <figure class="pure-u-1 pure-u-md-1-3">
-            <a href="i/dst/lion-lg.jpg" data-size="1240x1240">
-              <img
-              class="pure-img"
-              srcset="i/dst/lion-sm.jpg 480w,
-                      i/dst/lion-md.jpg 768w,
-                      i/dst/lion-lg.jpg 1240w"
-
-              alt="Pointilism Lion">
-              <span class="overlay"></span>
-              <span class="caption">Pointilism Lion</span>
-            </a>
-            <figcaption class="visually-hidden">Pointilism Lion</figcaption>
-          </figure>
+        <!-- endinject -->
 
       </div><!-- end of .pure-g (end of the gallery)-->
 
