--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/pure@0.6.2(base-min.css+grids-min.css+grids-responsive-min.css)">
 
-  <link rel="stylesheet" href="c/dst/style.css">
+  <link rel="stylesheet" href="c/dist/style.css">
   <link rel="stylesheet" href="c/src/test.css">
 
   <!-- JS
@@ -30,7 +30,7 @@
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
   <![endif]-->
-  <script src="j/dst/script.js" async></script>
+  <script src="j/dist/script.js" async></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -75,8 +75,8 @@
 
         <!-- inject:jpg -->
         <figure class="pure-u-1 pure-u-md-1-3">
-<a href="i/dst/batman-lg.jpg" data-size="1920x2560">
-<img class="pure-img" srcset="i/dst/batman-sm.jpg 480w, i/dst/batman-md.jpg 960w, i/dst/batman-lg.jpg 1920w" sizes="100vw" src="i/dst/batman-md.jpg" alt="Batman" >
+<a href="i/dist/batman-lg.jpg" data-size="1920x2560">
+<img class="pure-img" srcset="i/dist/batman-sm.jpg 480w, i/dist/batman-md.jpg 960w, i/dist/batman-lg.jpg 1920w" sizes="100vw" src="i/dist/batman-md.jpg" alt="Batman" >
 <span class="overlay"></span>
 <span class="caption">Batman</span>
 </a>
@@ -84,8 +84,8 @@
 </figure>
 
         <figure class="pure-u-1 pure-u-md-1-3">
-<a href="i/dst/ben-lg.jpg" data-size="1920x2560">
-<img class="pure-img" srcset="i/dst/ben-sm.jpg 480w, i/dst/ben-md.jpg 960w, i/dst/ben-lg.jpg 1920w" sizes="100vw" src="i/dst/ben-md.jpg" alt="Ben Howard" >
+<a href="i/dist/ben-lg.jpg" data-size="1920x2560">
+<img class="pure-img" srcset="i/dist/ben-sm.jpg 480w, i/dist/ben-md.jpg 960w, i/dist/ben-lg.jpg 1920w" sizes="100vw" src="i/dist/ben-md.jpg" alt="Ben Howard" >
 <span class="overlay"></span>
 <span class="caption">Ben Howard</span>
 </a>
@@ -93,8 +93,8 @@
 </figure>
 
         <figure class="pure-u-1 pure-u-md-1-3">
-<a href="i/dst/hugh-lg.jpg" data-size="1920x2560">
-<img class="pure-img" srcset="i/dst/hugh-sm.jpg 480w, i/dst/hugh-md.jpg 960w, i/dst/hugh-lg.jpg 1920w" sizes="100vw" src="i/dst/hugh-md.jpg" alt="Wolverine" >
+<a href="i/dist/hugh-lg.jpg" data-size="1920x2560">
+<img class="pure-img" srcset="i/dist/hugh-sm.jpg 480w, i/dist/hugh-md.jpg 960w, i/dist/hugh-lg.jpg 1920w" sizes="100vw" src="i/dist/hugh-md.jpg" alt="Wolverine" >
 <span class="overlay"></span>
 <span class="caption">Wolverine</span>
 </a>
@@ -102,8 +102,8 @@
 </figure>
 
         <figure class="pure-u-1 pure-u-md-1-3">
-<a href="i/dst/iron-lg.jpg" data-size="1920x2560">
-<img class="pure-img" srcset="i/dst/iron-sm.jpg 480w, i/dst/iron-md.jpg 960w, i/dst/iron-lg.jpg 1920w" sizes="100vw" src="i/dst/iron-md.jpg" alt="Iron Man" >
+<a href="i/dist/iron-lg.jpg" data-size="1920x2560">
+<img class="pure-img" srcset="i/dist/iron-sm.jpg 480w, i/dist/iron-md.jpg 960w, i/dist/iron-lg.jpg 1920w" sizes="100vw" src="i/dist/iron-md.jpg" alt="Iron Man" >
 <span class="overlay"></span>
 <span class="caption">Iron Man</span>
 </a>
@@ -111,8 +111,8 @@
 </figure>
 
         <figure class="pure-u-1 pure-u-md-1-3">
-<a href="i/dst/thth-lg.jpg" data-size="1920x1920">
-<img class="pure-img" srcset="i/dst/thth-sm.jpg 480w, i/dst/thth-md.jpg 960w, i/dst/thth-lg.jpg 1920w" sizes="100vw" src="i/dst/thth-md.jpg" alt="The Head and the Heart" >
+<a href="i/dist/thth-lg.jpg" data-size="1920x1920">
+<img class="pure-img" srcset="i/dist/thth-sm.jpg 480w, i/dist/thth-md.jpg 960w, i/dist/thth-lg.jpg 1920w" sizes="100vw" src="i/dist/thth-md.jpg" alt="The Head and the Heart" >
 <span class="overlay"></span>
 <span class="caption">The Head and the Heart</span>
 </a>
@@ -120,8 +120,8 @@
 </figure>
 
         <figure class="pure-u-1 pure-u-md-1-3">
-<a href="i/dst/watson-lg.jpg" data-size="1920x2560">
-<img class="pure-img" srcset="i/dst/watson-sm.jpg 480w, i/dst/watson-md.jpg 960w, i/dst/watson-lg.jpg 1920w" sizes="100vw" src="i/dst/watson-md.jpg" alt="Patrick Watson" >
+<a href="i/dist/watson-lg.jpg" data-size="1920x2560">
+<img class="pure-img" srcset="i/dist/watson-sm.jpg 480w, i/dist/watson-md.jpg 960w, i/dist/watson-lg.jpg 1920w" sizes="100vw" src="i/dist/watson-md.jpg" alt="Patrick Watson" >
 <span class="overlay"></span>
 <span class="caption">Patrick Watson</span>
 </a>
