--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/pure@0.6.2(base-min.css+grids-min.css+grids-responsive-min.css)">
 
-  <link rel="stylesheet" href="c/dst/style.css">
-  <link rel="stylesheet" href="c/dst/portfolio.css">
+  <link rel="stylesheet" href="c/dist/style.css">
+  <link rel="stylesheet" href="c/dist/portfolio.css">
 
   <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -31,7 +31,7 @@
     // Picture element HTML5 shiv
     document.createElement( "picture" );
   </script>
-  <script src="j/dst/script.js" async></script>
+  <script src="j/dist/script.js" async></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -61,9 +61,9 @@
             <span title="Pointilism Lion">
               <img
                 class="pure-img"
-                srcset="i/dst/lion-sm.jpg 480w,
-                        i/dst/lion-md.jpg 768w,
-                        i/dst/lion-lg.jpg 1240w"
+                srcset="i/dist/lion-sm.jpg 480w,
+                        i/dist/lion-md.jpg 768w,
+                        i/dist/lion-lg.jpg 1240w"
                 alt="Pointilism Lion">
               </span>
           </div>
@@ -72,9 +72,9 @@
             <span title="Coeur de Pirate">
               <img
                 class="pure-img"
-                srcset="i/dst/french-sm.jpg 480w,
-                        i/dst/french-md.jpg 768w,
-                        i/dst/french-lg.jpg 1240w"
+                srcset="i/dist/french-sm.jpg 480w,
+                        i/dist/french-md.jpg 768w,
+                        i/dist/french-lg.jpg 1240w"
                 alt="Coeur de Pirate, comparison photo and drawing">
             </span>
           </div>
@@ -83,9 +83,9 @@
             <span title="Tiger in Snow">
               <img
                 class="pure-img"
-                srcset="i/dst/tiger-sm.jpg 480w,
-                        i/dst/tiger-md.jpg 768w,
-                        i/dst/tiger-lg.jpg 1240w"
+                srcset="i/dist/tiger-sm.jpg 480w,
+                        i/dist/tiger-md.jpg 768w,
+                        i/dist/tiger-lg.jpg 1240w"
                 alt="Tiger">
             </span>
           </div>
@@ -107,9 +107,9 @@
             <span title="Batman">
               <img
                 class="pure-img"
-                srcset="i/dst/batman-sm.jpg 480w,
-                        i/dst/batman-md.jpg 768w,
-                        i/dst/batman-lg.jpg 1240w"
+                srcset="i/dist/batman-sm.jpg 480w,
+                        i/dist/batman-md.jpg 768w,
+                        i/dist/batman-lg.jpg 1240w"
                 alt="Batman">
             </span>
           </div>
@@ -118,9 +118,9 @@
             <span title="Wolverine">
               <img
                 class="pure-img"
-                srcset="i/dst/hugh-sm.jpg 480w,
-                        i/dst/hugh-md.jpg 768w,
-                        i/dst/hugh-lg.jpg 1240w"
+                srcset="i/dist/hugh-sm.jpg 480w,
+                        i/dist/hugh-md.jpg 768w,
+                        i/dist/hugh-lg.jpg 1240w"
                 alt="Wolverine">
             </span>
           </div>
@@ -129,9 +129,9 @@
             <span title="Iron Man">
               <img
                 class="pure-img"
-                srcset="i/dst/iron-sm.jpg 480w,
-                        i/dst/iron-md.jpg 768w,
-                        i/dst/iron-lg.jpg 1240w"
+                srcset="i/dist/iron-sm.jpg 480w,
+                        i/dist/iron-md.jpg 768w,
+                        i/dist/iron-lg.jpg 1240w"
                 alt="Iron Man">
             </span>
           </div>
@@ -145,9 +145,9 @@
             <span title="Ben Howard">
               <img
                 class="pure-img"
-                srcset="i/dst/ben-sm.jpg 480w,
-                        i/dst/ben-md.jpg 768w,
-                        i/dst/ben-lg.jpg 1240w"
+                srcset="i/dist/ben-sm.jpg 480w,
+                        i/dist/ben-md.jpg 768w,
+                        i/dist/ben-lg.jpg 1240w"
                 alt="Ben Howard">
             </span>
           </div>
@@ -156,9 +156,9 @@
             <span title="The Head and the Heart">
               <img
                 class="pure-img"
-                srcset="i/dst/thth-sm.jpg 480w,
-                        i/dst/thth-md.jpg 768w,
-                        i/dst/thth-lg.jpg 1240w"
+                srcset="i/dist/thth-sm.jpg 480w,
+                        i/dist/thth-md.jpg 768w,
+                        i/dist/thth-lg.jpg 1240w"
                 alt="The Head and the Heart">
             </span>
           </div>
@@ -167,9 +167,9 @@
             <span title="Patrick Watson">
               <img
                 class="pure-img"
-                srcset="i/dst/watson-sm.jpg 480w,
-                        i/dst/watson-md.jpg 768w,
-                        i/dst/watson-lg.jpg 1240w"
+                srcset="i/dist/watson-sm.jpg 480w,
+                        i/dist/watson-md.jpg 768w,
+                        i/dist/watson-lg.jpg 1240w"
                 alt="Patrick Watson">
             </span>
           </div>
@@ -190,9 +190,9 @@
             <span title="Leonardo Dicaprio">
               <img
                 class="pure-img"
-                srcset="i/dst/leo-sm.jpg 480w,
-                        i/dst/leo-md.jpg 768w,
-                        i/dst/leo-lg.jpg 1240w"
+                srcset="i/dist/leo-sm.jpg 480w,
+                        i/dist/leo-md.jpg 768w,
+                        i/dist/leo-lg.jpg 1240w"
                 alt="Leonardo Dicaprio">
             </span>
           </div>
@@ -201,9 +201,9 @@
             <span title="Hear me roar">
               <img
                 class="pure-img"
-                srcset="i/dst/roar-sm.jpg 480w,
-                        i/dst/roar-md.jpg 768w,
-                        i/dst/roar-lg.jpg 1240w"
+                srcset="i/dist/roar-sm.jpg 480w,
+                        i/dist/roar-md.jpg 768w,
+                        i/dist/roar-lg.jpg 1240w"
                 alt="Lion">
             </span>
           </div>
@@ -212,9 +212,9 @@
             <span title="Trapped">
               <img
                 class="pure-img"
-                srcset="i/dst/octo-sm.jpg 480w,
-                        i/dst/octo-md.jpg 768w,
-                        i/dst/octo-lg.jpg 1240w"
+                srcset="i/dist/octo-sm.jpg 480w,
+                        i/dist/octo-md.jpg 768w,
+                        i/dist/octo-lg.jpg 1240w"
                 alt="Octopus in Lightbulb">
             </span>
           </div>
@@ -228,9 +228,9 @@
             <span title="Ducklings">
               <img
                 class="pure-img"
-                srcset="i/dst/ducks-sm.jpg 480w,
-                        i/dst/ducks-md.jpg 768w,
-                        i/dst/ducks-lg.jpg 1240w"
+                srcset="i/dist/ducks-sm.jpg 480w,
+                        i/dist/ducks-md.jpg 768w,
+                        i/dist/ducks-lg.jpg 1240w"
                 alt="Ducklings">
             </span>
           </div>
@@ -239,9 +239,9 @@
             <span title="Breaking Bad">
               <img
                 class="pure-img"
-                srcset="i/dst/breaking-sm.jpg 480w,
-                        i/dst/breaking-md.jpg 768w,
-                        i/dst/breaking-lg.jpg 1240w"
+                srcset="i/dist/breaking-sm.jpg 480w,
+                        i/dist/breaking-md.jpg 768w,
+                        i/dist/breaking-lg.jpg 1240w"
                 alt="Breaking Bad">
             </span>
           </div>
@@ -250,9 +250,9 @@
             <span title="Wiz Khalifa">
               <img
                 class="pure-img"
-                srcset="i/dst/wiz-sm.jpg 480w,
-                        i/dst/wiz-md.jpg 768w,
-                        i/dst/wiz-lg.jpg 1240w"
+                srcset="i/dist/wiz-sm.jpg 480w,
+                        i/dist/wiz-md.jpg 768w,
+                        i/dist/wiz-lg.jpg 1240w"
                 alt="Wiz Khalifa, comparison photo and drawing">
             </span>
           </div>
